Fix spacing issue on front page after using templating
Whitespace was introduced between the .suggested-item elements.
This removes the whitespace by setting the font-size to 0.
However, I've had to change where the font-size is changed back to 14px so my em
spacing will continue to function correctly.

--- a/static/style.css
+++ b/static/style.css
@@ -178,6 +178,7 @@ img.preview-comic {
 }
 .suggested {
 	text-align: center;
+	font-size: 0; /* hide whitespace */
 }
 .suggested-item {
 	display: inline-block;
@@ -193,13 +194,10 @@ img.preview-comic {
 }
 .suggested-item .title-and-author {
 	display: block;
-	position: relative;
-	top: -8px;
-	padding: 0.2em 0.5em;
-}
-.suggested-item .title-and-author .title {
+	padding: 0 0.5em 0.2em;
 	font-size: 14pt;
 }
+.suggested-item .title-and-author .title {}
 .suggested-item .title-and-author .author {
 	font-size: 10pt;
 }
